--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Me myself and I</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.svg" />
     <link rel="stylesheet" href="main.scss" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="background"></div>
     <!-- Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg_nav_foot">
       <div class="container">
@@ -30,13 +32,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarId">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item ms-auto">
               <a href="#about" class="nav-link nav__link">about</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ms-auto">
               <a href="#skills" class="nav-link nav__link">skills</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ms-auto">
               <a href="#projects" class="nav-link nav__link">projects</a>
             </li>
           </ul>
@@ -525,7 +527,9 @@
                   <div
                     id="carouselExampleCaptions"
                     class="carousel carousel-dark slide"
-                    data-bs-interval="false"
+                    data-bs-interval="5000"
+                    data-bs-touch="true"
+                    data-bs-ride="carousel"
                     style="max-width: 1100px">
                     <div class="carousel-indicators">
                       <button
